--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="header">
+
+        </div>
+        <div class="main-content">
+            
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
