--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="main-container">
         <div class="header">
 
         </div>
         <div class="main-content">
-            
+            <h1>Library Books</h1>
+            <div class="book-container">
+                <div>ban</div>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
