modified index.html, style.css and script.js
added remove and toggle read button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <label for="bookReadStatus">Read Status</label>
                         <select name="" id="bookReadStatus">
                             <option value="read">Read</option>
-                            <option value="not_yet">Not Yet Read</option>
+                            <option value="Not Yet Read">Not Yet Read</option>
                         </select>
                     </div>
                     
