--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div>
                         <label for="bookReadStatus">Read Status</label>
                         <select name="" id="bookReadStatus">
-                            <option value="read">Read</option>
+                            <option value="Read">Read</option>
                             <option value="Not Yet Read">Not Yet Read</option>
                         </select>
                     </div>
